--- a/glasGalleriet.css
+++ b/glasGalleriet.css
@@ -11,3 +11,14 @@ h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
+p{
+    font-size: 50px;
+    text-align: start;
+}
+img{
+    margin-left: 23cm;
+    margin-top: -200px;
+    width: 10cm;
+    height: 10cm;
+    border:3px solid #08acc9;
+}
